# htdse

./: .gitignore  GUIDE.md  PHYSICS.md  README.md  Writeup.md  pyproject.toml  schematic.html
demos/: 00_guide.ipynb  01_jaynes_cummings_composition.ipynb  02_two_qubit_crosstalk.ipynb  03_motional_dephasing.ipynb  04_single_qubit_gate_error.ipynb  05_ms_two_qubit_gate.ipynb  jaynes_cummings_composition.ipynb  motional_dephasing.ipynb  ms_two_qubit_gate.ipynb  single_qubit_gate_error.ipynb  two_qubit_crosstalk.ipynb
src/htdse/: __init__.py  magnus.py  util.py
src/htdse/core/: compare.py  config.py  evolution.py  mechanism.py  operator.py  plotting.py  subsystems.py  terms.py
src/htdse/submodules/: harmonic_oscillator.py  molmer_sorensen.py  spin.py  trotter.py  wigner.py
tests/: test_htdse.py  test_molmer_sorensen.py
